Refactor: Standardize Path creation and improve import order
- Replace Paths.get() with Path.of() for better Java 11+ compatibility
- Reorganize import statements to follow project conventions
- Remove unused imports
- Update JournalAbbreviationPreferences to use Path.of()
- Ensure consistent use of Path creation methods across the project

This commit addresses issues raised by MainArchitectureTest and
improves overall code quality and consistency. It also helps in
maintaining a uniform coding standard throughout the project.